# 3D-baseline-lab

./: .env.example  .gitignore  pyproject.toml  readme.md  requirements.txt  Методологии обработки 3D-объектов.md
outputs/algorithmic/test_part_algorithmic_top8/: metadata.json
outputs/cap3d/demo_cap3d_views/: metadata.json
outputs/cap3d/test_part_cap3d_views/: metadata.json
outputs/iso/demo_iso_first/: metadata.json
outputs/iso/demo_iso_third/: metadata.json
outputs/iso/test_part_iso_first/: metadata.json
outputs/iso/test_part_iso_third/: metadata.json
outputs/isomap/test_part_isomap/: metadata.json
outputs/vlm_iterative/test_part_vlm_iterative/: metadata.json
src/baseline_lab/: cli.py  demo.py  io.py
src/baseline_lab/baselines/: algorithmic.py  cap3d.py  iso.py  isomap.py  vlm_iterative.py
